# Brake-Temperature-Monitoring-System-BTMS-

./: .dockerignore  .gitignore  LICENSE  README.md  dashboard.html  docker-compose.yml  virtual_node.py  walkthrough_demo.md
condition-monitor/: CMakeLists.txt  Dockerfile
condition-monitor/include/: MovingAverage.h  PredictiveModel.h  StateMachine.h  Utils.h
condition-monitor/include/drivers/: HAL_Interfaces.h  VirtualDrivers.h
condition-monitor/src/: MovingAverage.cpp  PredictiveModel.cpp  StateMachine.cpp  main.cpp  moving_average_test.cpp
docs/v-model/: SDD.md  SRS.md
telemetry-backend/: Dockerfile  go.mod  ingestion_test.go  main.go
